# OvenMediaEngine

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.local  docker-compose.yml
src/projects/: CMakeLists.txt
src/projects/api_server/: CMakeLists.txt
src/projects/base/: CMakeLists.txt  common_types.h
src/projects/base/event/: CMakeLists.txt
src/projects/base/info/: CMakeLists.txt  audio_track.cpp  audio_track.h  media_track.cpp  media_track.h  record.cpp  record.h  session.h  stream.cpp  stream.h  subtitle_track.cpp  subtitle_track.h  video_track.cpp  video_track.h
src/projects/base/mediarouter/: media_type.h
src/projects/base/modules/: CMakeLists.txt
src/projects/base/ovcrypto/: CMakeLists.txt  message_digest.cpp
src/projects/base/ovlibrary/: CMakeLists.txt  bit_reader.h  bit_reader_test.cpp  constexpr_utilities.h  data_test.cpp  files.cpp  hex_test.cpp  lip_sync_clock.cpp  lip_sync_clock.h  log_internal.h  ovlibrary.h  platform.cpp  regex_test.cpp  stop_watch_test.cpp  string_test.cpp  thread_checker.h  url_test.cpp
src/projects/base/ovsocket/: CMakeLists.txt  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socket_address_test.cpp
src/projects/base/provider/: CMakeLists.txt  application.cpp  provider.cpp  stream.cpp  stream.h
src/projects/base/publisher/: CMakeLists.txt  publisher.cpp  stream.h
src/projects/config/: CMakeLists.txt  config_loader_test.cpp  config_manager.cpp
src/projects/config/engine/: item.h
src/projects/main/: AMS.mk  CMakeLists.txt  main.cpp  main.h  signals.cpp  signals.h  third_parties.cpp  third_parties.h
src/projects/mediarouter/: CMakeLists.txt  mediarouter.cpp  mediarouter_alert.cpp  mediarouter_alert.h  mediarouter_application.cpp  mediarouter_application.h  mediarouter_event_generator.h  mediarouter_nomalize.cpp  mediarouter_stats.cpp  mediarouter_stream.cpp  mediarouter_stream_tap.h  mediarouter_test.cpp
src/projects/mediarouter/events/: mediarouter_event_info.cpp
src/projects/modules/: CMakeLists.txt
src/projects/modules/access_control/: CMakeLists.txt
src/projects/modules/address/: CMakeLists.txt
src/projects/modules/bitstream/: CMakeLists.txt  h264_common_test.cpp
src/projects/modules/containers/: CMakeLists.txt
src/projects/modules/cpix_client/: CMakeLists.txt
src/projects/modules/dtls_srtp/: CMakeLists.txt
src/projects/modules/dump/: CMakeLists.txt
src/projects/modules/ffmpeg/: CMakeLists.txt  compat.h  image_reader.cpp  writer.cpp
src/projects/modules/http/: CMakeLists.txt  http_test.cpp
src/projects/modules/ice/: CMakeLists.txt  ice_session.cpp  ice_session.h
src/projects/modules/jitter_buffer/: CMakeLists.txt  jitter_buffer.h
src/projects/modules/json_serdes/: CMakeLists.txt  stream.cpp
src/projects/modules/managed_queue/: CMakeLists.txt  managed_queue.h  managed_queue_test.cpp
src/projects/modules/origin_map_client/: CMakeLists.txt
src/projects/modules/ovt_packetizer/: CMakeLists.txt
src/projects/modules/physical_port/: CMakeLists.txt
src/projects/modules/rtc_signalling/: CMakeLists.txt  rtc_signalling_server.cpp
src/projects/modules/rtmp/: CMakeLists.txt
src/projects/modules/rtmp_v2/: CMakeLists.txt
src/projects/modules/rtp_rtcp/: CMakeLists.txt  rtcp_packet.h  rtp_depacketizer_h264.cpp  rtp_depacketizer_h264.h  rtp_depacketizer_h265.cpp  rtp_depacketizer_h265.h  rtp_depacketizing_manager.h  rtp_rtcp.cpp  rtp_rtcp_test.cpp  ulpfec_generator.cpp
src/projects/modules/rtsp/: CMakeLists.txt
src/projects/modules/sdp/: CMakeLists.txt  payload_attr.cpp  session_description_test.cpp
src/projects/modules/segment_writer/: CMakeLists.txt  writer.cpp
src/projects/modules/srt/: CMakeLists.txt  srt_stream_url_resolver.cpp
src/projects/modules/transcode_webhook/: CMakeLists.txt
src/projects/modules/whip/: CMakeLists.txt  whip_server.cpp
src/projects/monitoring/: CMakeLists.txt  application_metrics.cpp  common_metrics.cpp  common_metrics.h  event.cpp  host_metrics.cpp  monitoring.cpp  monitoring.h  server_metrics.cpp  stream_metrics.cpp  stream_metrics.h
src/projects/monitoring/alert/: alert.cpp  alert.h  alert_rules_updater.cpp  notification_data.cpp  notification_data.h
src/projects/orchestrator/: CMakeLists.txt  orchestrator.cpp  orchestrator.h  orchestrator_test.cpp  origin.h
src/projects/providers/: CMakeLists.txt  providers.h
src/projects/providers/file/: CMakeLists.txt  file_stream.h
src/projects/providers/mpegts/: CMakeLists.txt  mpegts_provider.cpp  mpegts_stream.h
src/projects/providers/multiplex/: CMakeLists.txt
src/projects/providers/ovt/: CMakeLists.txt  ovt_stream.cpp  ovt_stream.h
src/projects/providers/rtmp/: CMakeLists.txt  rtmp_stream.cpp  rtmp_stream.h
src/projects/providers/rtspc/: CMakeLists.txt  rtspc_stream.cpp  rtspc_stream.h
src/projects/providers/scheduled/: CMakeLists.txt  schedule.cpp  schedule.h  scheduled_stream.cpp  scheduled_stream.h
src/projects/providers/srt/: CMakeLists.txt
src/projects/providers/webrtc/: CMakeLists.txt  webrtc_provider.cpp  webrtc_stream.cpp  webrtc_stream.h
src/projects/publishers/: CMakeLists.txt
src/projects/publishers/file/: CMakeLists.txt  file_application.cpp  file_application.h  file_session.cpp  file_session.h  file_stream.cpp  file_userdata.cpp  file_userdata.h
src/projects/publishers/hls/: CMakeLists.txt  hls_media_playlist.cpp  hls_publisher.cpp  hls_session.h  hls_stream.cpp
src/projects/publishers/llhls/: CMakeLists.txt  llhls_chunklist.cpp  llhls_master_playlist.cpp  llhls_publisher.cpp  (+2 more)
src/projects/transcoder/: CMakeLists.txt  transcoder.cpp  transcoder.h  transcoder_alert.cpp  transcoder_application.cpp  transcoder_application.h  transcoder_composite.cpp  transcoder_composite.h  transcoder_decoder.cpp  transcoder_decoder.h  transcoder_encoder.cpp  transcoder_encoder.h  transcoder_filter.cpp  transcoder_gpu.cpp  transcoder_stream.cpp  transcoder_stream.h  transcoder_stream_internal.cpp  transcoder_test.cpp  transcoder_whisper_model_registry.cpp  transcoder_whisper_model_registry.h
src/projects/web_console/: CMakeLists.txt  web_console_server.cpp
(+189 files in other folders)
